# NexusAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh  zeabur.json
.agents/skills/harness-eval/: SKILL.md
.github/workflows/: ci.yml
docs/: SHOWCASE.md
frontend/terminal/: package-lock.json  package.json
frontend/web/: index.html  package-lock.json  package.json  vite.config.ts
frontend/web/src/: App.tsx
ohmo/: __init__.py  cli.py  prompts.py  runtime.py  session_storage.py  workspace.py
ohmo/gateway/: bridge.py  config.py  router.py  runtime.py  service.py
personal_agent/: __init__.py  __main__.py  cli.py  memory.py  prompts.py  runtime.py  session_storage.py  workspace.py
personal_agent/gateway/: __init__.py  bridge.py  config.py  models.py  router.py  runtime.py  service.py
scripts/: e2e_smoke.py  install.sh  install_dev.sh  local_system_scenarios.py  react_tui_e2e.py  test_cli_flags.py  test_harness_features.py  test_headless_rendering.py  test_react_tui_redesign.py  test_real_skills_plugins.py  test_tui_interactions.py
src/nexus/: __main__.py  cli.py  platforms.py
src/nexus/api/: __init__.py  client.py  codex_client.py  copilot_auth.py  copilot_client.py  errors.py  openai_client.py  provider.py
src/nexus/auth/: __init__.py  external.py  flows.py  manager.py  storage.py
src/nexus/bridge/: __init__.py  manager.py  session_runner.py  work_secret.py
src/nexus/channels/: __init__.py  adapter.py
src/nexus/commands/: __init__.py  registry.py
src/nexus/config/: __init__.py  paths.py  schema.py  settings.py
src/nexus/coordinator/: __init__.py  agent_definitions.py  coordinator_mode.py
src/nexus/engine/: __init__.py  cost_tracker.py  messages.py  query.py  query_engine.py  stream_events.py
src/nexus/hooks/: __init__.py  events.py  executor.py  hot_reload.py  loader.py
src/nexus/keybindings/: __init__.py  loader.py  resolver.py
tests/: test_commands.py  test_compact.py  test_config.py  test_memory.py  test_memory_integration.py  test_memory_store.py  test_memory_types.py  test_platforms.py  test_query.py  test_tools.py  test_web_routes.py
(+172 files in other folders)
