[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-ai"
version = "0.1.5"
description = "Nexus: Enterprise AI Agent Harness - Tools, Skills, Memory, Multi-Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "novix-science" },
]

# Core dependencies (required for basic operation)
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "mcp>=1.0.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0",
    "questionary>=2.0.1",
    "croniter>=2.0.0",
    "gevent[web]>=26.4.0",
    "socketio-client[dev]>=0.7.2",
]

[project.optional-dependencies]
# IM channel integrations (optional - install only if needed)
channels = [
    "slack-sdk>=3.0.0",
    "python-telegram-bot>=21.0.0",
    "discord.py>=2.0.0",
    "lark-oapi>=1.5.0",
]
# Development dependencies
dev = [
    "pexpect>=4.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
# Web UI dependencies
web = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.10.0",
    "flask-cors>=4.0.0",
    "eventlet>=0.36.0",
]
# Multi-user system dependencies
multi-user = [
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "sqlmodel>=0.0.21",
]
# All optional dependencies
all = [
    "nexus-ai[channels,dev,web]",
]

[project.scripts]
nexus = "nexus.cli:app"
nx = "nexus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus", "personal_agent"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/terminal/package.json" = "nexus/_frontend/package.json"
"frontend/terminal/tsconfig.json" = "nexus/_frontend/tsconfig.json"
"frontend/terminal/src" = "nexus/_frontend/src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"src/nexus/web/server.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
